# bgcflow_wrapper

./: .flake8  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  env.yaml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  requirements_dev.txt  setup.cfg  setup.py  tox.ini  versions.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml  test_commands.yml  unit.yml
0.2.1.dev/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1.dev/api/: index.html
0.2.1.dev/authors/: index.html
0.2.1.dev/contributing/: index.html
0.2.1.dev/history/: index.html
0.2.1.dev/installation/: index.html
0.2.1.dev/search/: search_index.json
0.2.1.dev/tutorial/: index.html
0.2.1.dev/usage/: index.html
0.3.5/: 404.html  index.html  sitemap.xml
0.3.5/api/: index.html
0.3.5/authors/: index.html
0.3.5/contributing/: index.html
0.3.5/history/: index.html
0.3.5/installation/: index.html
0.3.5/search/: search_index.json
0.3.5/tutorial/: index.html
0.3.5/usage/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/api/: index.html
0.4.0/authors/: index.html
0.4.0/contributing/: index.html
0.4.0/history/: index.html
0.4.0/installation/: index.html
0.4.0/search/: search_index.json
0.4.0/tutorial/: index.html
0.4.0/usage/: index.html
0.5.1.dev/: 404.html  index.html  objects.inv  sitemap.xml
0.5.1.dev/api/: index.html
0.5.1.dev/authors/: index.html
0.5.1.dev/contributing/: index.html
0.5.1.dev/history/: index.html
0.5.1.dev/installation/: index.html
0.5.1.dev/search/: search_index.json
0.5.1.dev/tutorial/: index.html
0.5.1.dev/usage/: index.html
0.6.2.dev/: 404.html  index.html  objects.inv  sitemap.xml
0.6.2.dev/api/: index.html
0.6.2.dev/authors/: index.html
0.6.2.dev/contributing/: index.html
0.6.2.dev/history/: index.html
0.6.2.dev/installation/: index.html
0.6.2.dev/search/: search_index.json
0.6.2.dev/tutorial/: index.html
0.6.2.dev/usage/: index.html
bgcflow/: __init__.py  bgcflow.py  bgcflow_wrapper.py  cli.py  mkdocs.py  projects_util.py
bgcflow_wrapper/: __init__.py  bgcflow_wrapper.py  cli.py  mkdocs.py  projects_util.py
docs/: Makefile  api.md  conf.py  index.rst  installation.md  installation.rst  make.bat  tutorial.md  usage.md  usage.rst
src/bgcflow/: __init__.py  bgcflow.py  cli.py  metabase.py  mkdocs.py  projects_util.py
tests/: __init__.py  test_app.py  test_bgcflow.py  test_bgcflow_wrapper.py  test_generate_project.py  test_version.py
